--- a/style.css
+++ b/style.css
@@ -321,4 +321,8 @@ body {
         padding: 8px 15px;
     }
 }
-
+@media (max-width: 480px) {
+    .DEVELOPER {
+        font-size: 2rem;
+        letter-spacing: 3px;
+    }
